--- a/src/app/install/page.module.css
+++ b/src/app/install/page.module.css
@@ -17,15 +17,10 @@ span.card {
   font-family: var(--font-mono);
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-}
-
 .grid {
   display: grid;
   justify-content: space-around;
-  grid-template-columns: repeat(3, minmax(30%, auto));
+  grid-template-columns: repeat(2, minmax(40%, auto));
   width: var(--max-width);
   max-width: 100%;
 }
@@ -90,6 +85,7 @@ span.card {
 
 .logo {
   position: relative;
+  mix-blend-mode: multiply;
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -115,6 +111,11 @@ span.card {
     padding: 4rem;
   }
 
+  .logo {
+    width: 285px;
+    object-fit: contain;
+  }
+
   .grid {
     grid-template-columns: 1fr;
     margin-bottom: 120px;
@@ -137,6 +138,52 @@ span.card {
   .center::before {
     transform: none;
     height: 300px;
+  }
+
+  .description {
+    font-size: 0.8rem;
+  }
+
+  .description a {
+    padding: 1rem;
+  }
+
+  .description p,
+  .description div {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+  }
+
+  .description p {
+    align-items: center;
+    inset: 0 0 auto;
+    padding: 2rem 1rem 1.4rem;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
+    background: linear-gradient(
+      to bottom,
+      rgba(var(--background-start-rgb), 1),
+      rgba(var(--callout-rgb), 0.5)
+    );
+    background-clip: padding-box;
+    backdrop-filter: blur(24px);
+  }
+
+  .description div {
+    align-items: flex-end;
+    pointer-events: none;
+    inset: auto 0 0;
+    padding: 2rem;
+    height: 200px;
+    background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      rgb(var(--background-end-rgb)) 40%
+    );
+    z-index: 1;
   }
 }
 
