--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,20 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
+  --max-width: 80vw;
+  --border-radius: 8px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --foreground-rgb: 40, 40, 40;
+  --background-start-rgb: 193, 218, 200;
   --background-end-rgb: 255, 255, 255;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
+    #16ff5033 0deg,
+    #08ff1c33 55deg,
+    #54ff6233 120deg,
+    #00ff3733 160deg,
     transparent 360deg
   );
   --secondary-glow: radial-gradient(
@@ -36,7 +36,7 @@
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
+  --card-rgb: 157, 183, 169;
   --card-border-rgb: 131, 134, 135;
 }
 
@@ -46,12 +46,12 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+    --primary-glow: radial-gradient(rgba(1, 255, 56, 0.4), rgba(1, 255, 77, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
+      rgba(1, 255, 107, 0),
+      rgba(1, 255, 77, 0),
+      rgba(1, 255, 56, 0.3)
     );
 
     --tile-start-rgb: 2, 13, 46;
